GNOME Bugzilla – Bug 369466
Doesn't handle screen size changes, or ratio changes
Last modified: 2012-04-22 00:16:11 UTC
When the screen size changes (through xrandr), the ratio, and visuals quality aren't updated. See size_changed_cb in the xine-lib backend.
*** Bug 379807 has been marked as a duplicate of this bug. ***
Why does the visuals quality (corresponding to visualisation framerate and resolution) need to be updated when the screen size changes?
(In reply to comment #2) > Why does the visuals quality (corresponding to visualisation framerate and > resolution) need to be updated when the screen size changes? Handle switching from a 4:3 aspect ratio to a widescreen one. The xine-lib code will make it such that the scaled visuals scale to the full width of the screen, without any black bars.
Looks like it was fixed actually: commit fc3c3936bd7379a3c482afba976a96135b6e6172 Author: Bastien Nocera <hadess@hadess.net> Date: Mon Nov 27 15:28:25 2006 +0000 Hopefully fix xine-lib build, Make the GStreamer backend respect 2006-11-27 Bastien Nocera <hadess@hadess.net> * src/backend/bacon-video-widget-gst-0.10.c: (bacon_video_widget_realize), (size_changed_cb), (get_visualization_size): * src/backend/bacon-video-widget-xine.c: (bacon_video_widget_finalize), (size_changed_cb), (bacon_video_widget_set_visuals_quality): Hopefully fix xine-lib build, Make the GStreamer backend respect widescreen output for visualisations