backend: Remove already fixed FIXME

Visualisation size already takes the screen's size into account.

https://bugzilla.gnome.org/show_bug.cgi?id=369466