src/backend/bacon-video-widget-gst-0.10.c
@@ -600,7 +600,6 @@ bacon_video_widget_realize (GtkWidget * widget)
 static void
 size_changed_cb (GdkScreen *screen, BaconVideoWidget *bvw)
 {
-  /* FIXME */
   setup_vis (bvw);
 }
 
